<resources>
    <string name="app_name">Iron Beast</string>

    <!-- activity_main -->

    <string name="introTextView">Iron Beast - Simplest 531 App</string>
    <string name="instruction1TextView">Step 1. You should buy the book to understand the program. Jim Wendler\'s site
    can be found <a href="https://jimwendler.com/">here.</a></string>
    <string name="instruction2TextView">Step 2. Go to settings and enter your maxes, template choices, and other variations in the settings option.</string>
    <string name="instruction3TextView">Step 3. Hit calculate and happy lifting!</string>
    <string name="settingsButton">Settings</string>

    <!-- activity_settings -->

    <string name="chooseLiftTextView">Enter your training maxes (TM) for each lift (it is suggested you start with 90% of your
    1 rep max) After each cycle, increase your Press and Bench TM by 5 and your Squat and Deadlift by 10.</string>
    <string name="lift1TextView">Press</string>
    <string name="lift2TextView">Squat</string>
    <string name="lift3TextView">Bench</string>
    <string name="lift4TextView">Deadlift</string>

    <string name="homeButton">Return Home</string>
    <string name="calculateButton">Create Program</string>

    <string name="settingsIntroTextView">Settings Page</string>

    <string name="templateTextView">Choose a Template</string>
    <string name="boringButBigRadioButton">Boring But Big</string>
    <string name="triumvirateRadioButton">Triumvirate</string>
    <string name="simplestStrengthRadioButton">Simplest Strength</string>
    <string name="notDoingJackRadioButton">I\'m Not Doing Jack Shit</string>

    <string name="downSetTextView">(Optional) Add a Down Set</string>
    <string name="pyramidRadioButton">Pyramid Down</string>
    <string name="firstSetLastRadioButton">First Set Last AMRAP</string>

    <!-- activity_program -->
    <string name="programIntroTextView">Program Page</string>


</resources>
